java - update switches